package main

import (
	"context"
	"encoding/json"
	"log/slog"

	amqp "github.com/rabbitmq/amqp091-go"
	"go.opentelemetry.io/otel"

	pb "github.com/timour/order-microservices/common/api"
	"github.com/timour/order-microservices/common/broker"
)

type consumer struct {
	service PaymentService
	logger  *slog.Logger
}

func NewConsumer(service PaymentService, logger *slog.Logger) *consumer {
	return &consumer{
		service: service,
		logger:  logger,
	}
}

// Listen: Startet RabbitMQ Consumer (wartet auf Events)
// Warum Listen?
// ‚Üí Payment Service ist PASSIV: Wartet auf "order.created" Events
// ‚Üí Orders Service ist AKTIV: Published Events
func (c *consumer) Listen(ch *amqp.Channel) {
	// Warum QueueDeclare?
	// ‚Üí Erstellt Queue f√ºr order.created events
	// ‚Üí DLX + DLQs werden automatisch in broker.Connect() erstellt!
	// ‚Üí x-dead-letter-exchange: Failed messages ‚Üí DLX ‚Üí order.created.dlq
	q, err := ch.QueueDeclare(
		broker.OrderCreatedEvent, // queue name: "order.created"
		true,  // durable: √úberlebt RabbitMQ Restart
		false, // delete when unused: NEIN
		false, // exclusive: Andere Consumer k√∂nnen auch lesen
		false, // no-wait
		amqp.Table{
			"x-dead-letter-exchange": broker.DLX, // ‚≠ê DLX Integration! Failed messages ‚Üí "dlx" exchange
		},
	)
	if err != nil {
		c.logger.Error("failed to declare queue", slog.Any("error", err))
		return
	}
	c.logger.Info("queue declared",
		slog.String("queue", broker.OrderCreatedEvent),
	)

	c.logger.Info("payment consumer started",
		slog.String("queue", broker.OrderCreatedEvent),
	)

	// Warum ch.Consume?
	// ‚Üí Registriert diesen Service als CONSUMER f√ºr Queue "order.created"
	// ‚Üí Gibt Channel zur√ºck: Empf√§ngt Messages als Go Channel!
	msgs, err := ch.Consume(
		q.Name, // queue: "order.created"
		"",     // consumer tag: "" = Auto-generiert
		false,  // auto-ack: FALSE! (Wichtig f√ºr DLQ!) ‚Üí Manuelles Ack/Nack
		false,  // exclusive: Andere Consumer k√∂nnen auch lesen (Load Balancing!)
		false,  // no-local: Irrelevant (RabbitMQ Feature)
		false,  // no-wait: Warte auf Server Best√§tigung
		nil,    // args: Keine extra Config
	)
	if err != nil {
		c.logger.Error("failed to start consuming", slog.Any("error", err))
		return
	}

	// Warum var forever chan struct{}?
	// ‚Üí Uninitialisierter Channel = blockiert EWIG bei <-forever
	// ‚Üí Verhindert dass Listen() returnt (Consumer soll IMMER laufen!)
	var forever chan struct{}

	// Warum Goroutine?
	// ‚Üí for d := range msgs blockiert!
	// ‚Üí In Goroutine: Haupt-Thread kann weiter (f√ºr Shutdown Handling)
	go func() {
		// Warum for d := range msgs?
		// ‚Üí Wartet auf neue Messages von RabbitMQ
		// ‚Üí Blockiert bis Message kommt!
		// ‚Üí d = Delivery (RabbitMQ Message mit Body, Headers, etc.)
		for d := range msgs {
			// ‚≠ê OpenTelemetry: Extract trace context from AMQP headers FIRST
			// ‚Üí Must be done before any processing to continue distributed trace
			ctx := broker.ExtractTraceContext(context.Background(), d.Headers)

			// ‚≠ê OpenTelemetry: Start span for message processing
			// ‚Üí This span represents the consumer processing the message
			// ‚Üí Will be visible in Jaeger as "AMQP - consume - order.created"
			tracer := otel.Tracer("payment")
			ctx, span := tracer.Start(ctx, "AMQP - consume - order.created")

			c.logger.Info("received message",
				slog.String("body", string(d.Body)),
			)

			// Warum json.Unmarshal?
			// ‚Üí d.Body ist []byte (JSON)
			// ‚Üí Konvertiert zur√ºck zu *pb.Order struct
			// ‚Üí GLEICHE Order die Orders Service published hat!
			o := &pb.Order{}
			if err := json.Unmarshal(d.Body, o); err != nil {
				c.logger.Error("failed to unmarshal order", slog.Any("error", err))
				// Warum HandleRetry?
				// ‚Üí Smart retry: Will retry up to 3 times
				// ‚Üí After 3 retries ‚Üí sends to DLQ
				if err := broker.HandleRetry(ch, &d); err != nil {
					c.logger.Error("error handling retry", slog.Any("error", err))
				}
				// Warum Nack nach HandleRetry?
				// ‚Üí Acknowledges THIS message (already republished by HandleRetry)
				// ‚Üí Prevents double processing
				d.Nack(false, false)
				span.End() // ‚≠ê End span before continue!
				continue
			}

			// üß™ TEST: Deliberately fail payments for testing DLQ
			// Warum dieser Test?
			// ‚Üí Zum Testen ob DLQ funktioniert!
			// ‚Üí Order mit CustomerID "FAIL_TEST" ‚Üí wird 3x retried ‚Üí dann DLQ
			// ‚Üí In RabbitMQ UI: Message sollte nach 3 retries in "dlq_main" erscheinen
			if o.CustomerId == "FAIL_TEST" {
				c.logger.Warn("deliberately failing payment for DLQ test",
					slog.String("customer_id", o.CustomerId),
					slog.String("order_id", o.Id),
				)
				// Warum HandleRetry + Nack?
				// ‚Üí HandleRetry: Manages retry logic and DLQ routing
				// ‚Üí Nack: Acknowledges this delivery
				if err := broker.HandleRetry(ch, &d); err != nil {
					c.logger.Error("error handling retry", slog.Any("error", err))
				}
				d.Nack(false, false)
				span.End() // ‚≠ê End span before continue!
				continue
			}

			// Warum service.CreatePayment?
			// ‚Üí Business Logic: Erstellt Stripe Payment Link
			// ‚Üí Siehe service.go f√ºr Details
			// ‚Üí Bekommt ctx mit Trace Context (f√ºr weitere Propagation!)
			paymentLink, err := c.service.CreatePayment(ctx, o)
			if err != nil {
				c.logger.Error("failed to create payment", slog.Any("error", err))
				// Warum HandleRetry bei Payment Failure?
				// ‚Üí Stripe API down? ‚Üí Retry up to 3 times with backoff
				// ‚Üí After 3 retries ‚Üí DLQ for manual investigation
				// ‚Üí Invalid Data? ‚Üí Will fail 3 times ‚Üí DLQ for debugging
				if err := broker.HandleRetry(ch, &d); err != nil {
					c.logger.Error("error handling retry", slog.Any("error", err))
				}
				d.Nack(false, false)
				span.End() // ‚≠ê End span before continue!
				continue
			}

			// ‚úÖ SUCCESS: Payment Link erstellt!
			// Warum d.Ack?
			// ‚Üí Best√§tigt RabbitMQ: "Message erfolgreich verarbeitet"
			// ‚Üí Message wird aus Queue GEL√ñSCHT
			// ‚Üí Arg (multiple=false): Nur DIESE Message acknowledgen
			d.Ack(false)

			c.logger.Info("payment link created",
				slog.String("payment_link", paymentLink),
				slog.String("order_id", o.Id),
			)

			// ‚≠ê End span after successful processing
			span.End()
		}
	}()

	c.logger.Info("waiting for messages...",
		slog.String("queue", broker.OrderCreatedEvent),
	)

	// Warum <-forever?
	// ‚Üí Blockiert EWIG (forever = nil Channel)
	// ‚Üí Listen() returnt NIE (Consumer l√§uft bis Process killed wird)
	// ‚Üí Wichtig: Sonst w√ºrde Listen() sofort returnen!
	<-forever
}
